<resources>
    <string name="app_name">Simple Word Flash</string>
    <string name="pron">Pronounciation</string>
    <string name="mean">Meaning</string>
    <string name="add">Add</string>
    <string name="word">Word</string>
    <string name="title">Simple Word Flash</string>
    <string name="goto_add">Add</string>
    <string name="goto_view">View</string>
    <string name="goto_test">Test</string>
    <string name="import_export_text">Import/export text</string>
    <string name="wordlist_default">Nothing loaded.</string>
    <string name="new_list">New List</string>
    <string name="delete_list">Delete current</string>
    <string name="test_initial_text">Press Next to begin.</string>
    <string name="erase">ERASE</string>
    <string name="answer">ANSWER</string>
    <string name="next">NEXT</string>
    <string name="random_weighted">Random Weighted</string>
    <string name="random">Random</string>
    <string name="sequential">Sequential</string>
    <string name="shuffled">Shuffled</string>
    <string name="start">Start</string>
    <string name="reset_priorities">Reset Priorities</string>
    <string name="save_dialog_text">The name of the word list.</string>
    <string name="export_dialog_help">\\n separates the words. \nEach line should have a Spelling, Pronunciation, Meaning, and Priority, in this order, separated by \\t.\nBeware that some programs (especially messengers) arbitrarily convert \\t to spaces.</string>
    <string name="toast_added">Added!</string>
    <string name="no_wordlist_selected">No word list selected.</string>
    <string name="words">words</string>
    <string name="toast_no_word_list">You don\'t have a word list selected!</string>
    <string name="toast_at_least_two">You need at least 2 words.</string>
    <string name="words_list">Words List</string>
    <string name="dialog_word_list_del_title">Word list delete</string>
    <string name="dialog_generic_deletion_confirmation">Do you really want to delete?</string>
    <string name="dialog_word_del_title">Word delete</string>
    <string name="dialog_word_list_new_title">New Word List</string>
    <string name="test_reshuffle">Reshuffling.</string>
    <string name="test_restart">Starting from the beginning.</string>
    <string name="random_desc">Randomly choose words, all words with equal frequency.</string>
    <string name="weighted_desc">Randomly choose words, with the word\'s frequency proportional to 2^(priority).</string>
    <string name="seq_desc">Sequentially read through the list.</string>
    <string name="shuffle_desc">Shuffle the words, so that all the words appear exactly once in a random order.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="import_text">Import Text</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="invalid_filename">Invalid Filename.</string>
</resources>
