<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TableLayout
        android:id="@+id/main_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/main_table_text"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_table_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/word"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <ToggleButton
                android:id="@+id/main_table_button_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textOff="@string/show"
                android:textOn="@string/hide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_table_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pron"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <ToggleButton
                android:id="@+id/main_table_button_pron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:textOff="@string/show"
                android:textOn="@string/hide"  />
        </TableRow>

        <TableRow
            android:id="@+id/main_table_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_table_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mean"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <ToggleButton
                android:id="@+id/main_table_button_mean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:textOff="@string/show"
                android:textOn="@string/hide"  />

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sett_tv"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:layout_marginTop="8dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_rb"
        android:gravity="left"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_weighted"
            android:id="@+id/sett_rb_weighted"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/sett_rb_random" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sequential"
            android:id="@+id/sett_rb_sequential" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuffled"
            android:id="@+id/sett_rb_shuffled" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/sett_start"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

</LinearLayout>