<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/main_title"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_add"
            android:id="@+id/main_btn_add"
            android:textSize="24dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_view"

            android:id="@+id/main_btn_view"
            android:textSize="24dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_test"
            android:id="@+id/main_btn_test"
            android:textSize="24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A0FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
<!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/main_btn_save"
            android:textSize="24dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Load"
            android:id="@+id/main_btn_load"
            android:textSize="24dp"/>
-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_export_text"
            android:id="@+id/main_btn_str"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordlist_default"
        android:id="@+id/main_wordcount"
        android:layout_marginTop="12dp"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            android:id="@+id/main_new"
            android:textSize="16dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_list"
            android:id="@+id/main_del"
            android:textSize="16dp" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_listlist" />
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nothing loaded.Nothing loaded.Nothing loaded.Nothing loaded.Nothing loaded.Nothing loaded."
        android:id="@+id/main_path"
        android:layout_marginTop="12dp"
        android:textSize="12dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use the three toggles above to choose what information is displayed in the Test, and what is not.\nTo edit/parse/import the word list from an external program, use the Import/Export text button above.\nThe numbers besides the words are its priority.\nThe frequency of a word is proportional to (2^priority).\nA word with a priority of 6 will be tested as twice as much as a word of priority 5 and so on."
        android:id="@+id/main_helptext"
        android:layout_marginTop="12dp"
        android:textSize="12dp"
        android:gravity="center" />
-->
</LinearLayout>
